fuse/output
In file included from fuse-example.c:13:0:
../fileTransfer.h:23:30: error: unknown type name ‘parserState_t’; did you mean ‘CryptoState_t’?
   headerInfo_t *outputHInfo, parserState_t *outputParserState,
                              ^~~~~~~~~~~~~
                              CryptoState_t
../fileTransfer.h:27:3: error: unknown type name ‘parserState_t’; did you mean ‘CryptoState_t’?
   parserState_t *outputParserState, char *outputBuffer,
   ^~~~~~~~~~~~~
   CryptoState_t
../fileTransfer.h:35:30: error: unknown type name ‘parserState_t’; did you mean ‘CryptoState_t’?
   headerInfo_t *outputHInfo, parserState_t *outputParserState,
                              ^~~~~~~~~~~~~
                              CryptoState_t
../fileTransfer.h:40:3: error: unknown type name ‘parserState_t’; did you mean ‘CryptoState_t’?
   parserState_t *outputParserState, char *outputBuffer,
   ^~~~~~~~~~~~~
   CryptoState_t
fuse-example.c: In function ‘getattr_callback’:
fuse-example.c:41:51: error: invalid type argument of ‘->’ (have ‘vfsPathParserState_t {aka struct <anonymous>}’)
   stbuf->st_size = vfs_getFileSize( c, parserState->fileObj );
                                                   ^~
fuse-example.c: In function ‘read_callback’:
fuse-example.c:82:28: error: ‘ENCRYPTED_BUFFER_LEN’ undeclared (first use in this function)
  char encryptedDataBuffer[ ENCRYPTED_BUFFER_LEN + AES_BLOCK_SIZE ];
                            ^~~~~~~~~~~~~~~~~~~~
fuse-example.c:82:28: note: each undeclared identifier is reported only once for each function it appears in
fuse-example.c:83:28: error: ‘DECRYPTED_BUFFER_LEN’ undeclared (first use in this function); did you mean ‘ENCRYPTED_BUFFER_LEN’?
  char decryptedDataBuffer[ DECRYPTED_BUFFER_LEN + AES_BLOCK_SIZE ];
                            ^~~~~~~~~~~~~~~~~~~~
                            ENCRYPTED_BUFFER_LEN
fuse-example.c:84:16: error: ‘STRING_BUFFER_LEN’ undeclared (first use in this function); did you mean ‘DECRYPTED_BUFFER_LEN’?
  char strBuf1[ STRING_BUFFER_LEN ], strBuf2[ STRING_BUFFER_LEN ];
                ^~~~~~~~~~~~~~~~~
                DECRYPTED_BUFFER_LEN
fuse-example.c:90:23: error: redeclaration of ‘vfsParserState’ with no linkage
  vfsPathParserState_t vfsParserState;
                       ^~~~~~~~~~~~~~
fuse-example.c:87:23: note: previous declaration of ‘vfsParserState’ was here
  vfsPathParserState_t vfsParserState;
                       ^~~~~~~~~~~~~~
fuse-example.c:93:21: error: ‘clientState’ undeclared (first use in this function); did you mean ‘setstate’?
  vfs_getFileWebUrl( clientState->ctx, &vfsParserState.fileObj, strBuf1, 2000 );
                     ^~~~~~~~~~~
                     setstate
fuse-example.c:96:48: error: invalid type argument of ‘->’ (have ‘vfsPathParserState_t {aka struct <anonymous>}’)
   long len = vfs_getFileSize( c, vfsParserState->fileObj );
                                                ^~
fuse-example.c:101:3: warning: implicit declaration of function ‘startFileDownload’; did you mean ‘finishFileDownload’? [-Wimplicit-function-declaration]
   startFileDownload( strBuf1, 0, 0, 0, 0, &googleCon, &hInfo,
   ^~~~~~~~~~~~~~~~~
   finishFileDownload
fuse-example.c:101:44: error: ‘googleCon’ undeclared (first use in this function)
   startFileDownload( strBuf1, 0, 0, 0, 0, &googleCon, &hInfo,
                                            ^~~~~~~~~
fuse-example.c:101:56: error: ‘hInfo’ undeclared (first use in this function)
   startFileDownload( strBuf1, 0, 0, 0, 0, &googleCon, &hInfo,
                                                        ^~~~~
fuse-example.c:103:26: error: ‘accessTokenState’ undeclared (first use in this function); did you mean ‘AccessTokenState_t’?
    getAccessTokenHeader( accessTokenState ) );
                          ^~~~~~~~~~~~~~~~
                          AccessTokenState_t
fuse-example.c:107:4: error: ‘received’ undeclared (first use in this function); did you mean ‘recv’?
    received = updateFileDownload( &googleCon, &hInfo,
    ^~~~~~~~
    recv
fuse-example.c:107:15: warning: implicit declaration of function ‘updateFileDownload’; did you mean ‘finishFileDownload’? [-Wimplicit-function-declaration]
    received = updateFileDownload( &googleCon, &hInfo,
               ^~~~~~~~~~~~~~~~~~
               finishFileDownload
fuse-example.c:109:29: error: ‘dataLength’ undeclared (first use in this function); did you mean ‘OBJ_length’?
      ENCRYPTED_BUFFER_LEN, &dataLength, "" );
                             ^~~~~~~~~~
                             OBJ_length
fuse-example.c:84:37: warning: unused variable ‘strBuf2’ [-Wunused-variable]
  char strBuf1[ STRING_BUFFER_LEN ], strBuf2[ STRING_BUFFER_LEN ];
                                     ^~~~~~~
fuse-example.c:84:7: warning: unused variable ‘strBuf1’ [-Wunused-variable]
  char strBuf1[ STRING_BUFFER_LEN ], strBuf2[ STRING_BUFFER_LEN ];
       ^~~~~~~
fuse-example.c:83:7: warning: unused variable ‘decryptedDataBuffer’ [-Wunused-variable]
  char decryptedDataBuffer[ DECRYPTED_BUFFER_LEN + AES_BLOCK_SIZE ];
       ^~~~~~~~~~~~~~~~~~~
fuse-example.c:82:7: warning: unused variable ‘encryptedDataBuffer’ [-Wunused-variable]
  char encryptedDataBuffer[ ENCRYPTED_BUFFER_LEN + AES_BLOCK_SIZE ];
       ^~~~~~~~~~~~~~~~~~~
At top level:
fuse-example.c:19:20: warning: ‘filecontent’ defined but not used [-Wunused-variable]
 static const char *filecontent = "I'm the content of the only file available there\n";
                    ^~~~~~~~~~~
fuse-example.c:18:20: warning: ‘filepath’ defined but not used [-Wunused-variable]
 static const char *filepath = "/file";
                    ^~~~~~~~
